fixed non centered titles on small screen sizes

--- a/source/stylesheets/release-posts.css.scss
+++ b/source/stylesheets/release-posts.css.scss
@@ -271,7 +271,6 @@ h2 {
 
   h2 {
     justify-content: flex-start;
-    text-align: left;
   }
 }
 
